tests/errors/codegen/fortran/randint.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from numpy.random import randint

a = randint(10, size = 5)
